removing sql as db

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,4 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+
 default: &default
   adapter: postgresql
   pool: 5
@@ -22,4 +17,4 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: tinboard
